# E-Logico

./: .gitignore  README.md
cpp/: .nfs0000000003f20187000001ef  .nfs0000000003f2025900000255  .nfs0000000003f2040e000001ee  .nfs0000000003f205bd000001fb  .nfs0000000003f205c8000001f8  .nfs0000000003f20629000001f0  .nfs0000000003f2066f000001f1  .nfs0000000003f20678000001f4  .nfs0000000003f20694000001f7  CMakeLists.txt  Conversor.cpp  Conversor.h  FloatToBinIEEE754.cpp  Literaisprontos.txt  Literal.cpp  Literal.h  LiteralTest.cpp  TableGenerator.cpp  TableGenerator.h  binIEEE754ToFloat.cpp  binaryToDecimal.cpp  decimalToBinary.cpp  main  main.cpp  main_de_simplificadores.cpp  menuApresentacao.cpp  menuApresentacao.h  regrasProposicionais.cpp  regrasProposicionais.h  simplificadorLogico.cpp  simplificadorLogico.h
haskell/: .gitignore  Conversor.hs  Lit.hs  LiteraisProntos.txt  Literal.hs  MenuApresentacao.hs  RegrasProposicionais.hs  SimplificadorLogico.hs  TruthTableGenerator.hs  Util.hs  conversor.hs  main  main.hs  prontos.txt  teste.hs
prolog/: .gitignore  PadraoCodificacao.pl  Util.pl  arrays_features.pl  artimetic_features.pl  conversor.pl  io_features.pl  literal.pl  logical_features.pl  main.pl  menu.pl  regrasProposicionais.pl  simplificador_logico.pl  strings_features.pl  teste.pl  truth_table_generator.pl  util_interface.pl
prolog/Others/: Literal.pl  PadraoCodificacao.pl  literal_beta.pl  readme.txt
python/: .gitignore
python/src/: Literal.py  menu_apresentacao.py  referenciasBasicas.py  truth_table_generator.py  util.py
python/testing/: main.py
